# ortc-pipeline

./: README.md  pyproject.toml
.github/workflows/: benchmark.yml  deploy.yml
docker/: bench.Dockerfile  ortc-server.Dockerfile  rest-server.Dockerfile
infra/: ecr.tf  ecs.tf  main.tf  outputs.tf  s3.tf  variables.tf  vpc.tf
scripts/: bootstrap-tfstate.sh  bootstrap.sh  build-push.sh  run-bench.sh
src/: bench.py  db.py  models.py
src/ortc/: client.py  server.py
src/rest/: client.py  server.py
