[project]
name = "ortc-pipeline"
version = "0.1.0"
description = "Batch data transfer comparison: REST API vs ORTC Data Channels"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "aiortc>=1.9",
    "pydantic>=2.10",
    "aiohttp>=3.11",
    "boto3>=1.35",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
